--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,64 +1,86 @@
 <div class="container">
- <div class=row>
-
-     <section class="col-3">
-        <h5 class="text-warning ml-3">Sort</h5>
-        <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
-            <option  *ngFor="let sort of sortOptions"
-            [value]="sort.value"
-            >
-            {{sort.name}}
-            </option>
+  <div class="row">
+    <section class="col-3">
+      <ng-container *ngIf="brands && types">
+        <h5 class="text-warning ml-3 mb-4">Sort</h5>
+        <select
+          class="custom-select mb-3"
+          (change)="onSortSelected($event.target.value)"
+        >
+          <option *ngFor="let sort of sortOptions" [value]="sort.value">
+            {{ sort.name }}
+          </option>
         </select>
 
         <h5 class="text-warning ml-3">Brands</h5>
         <ul class="list-group my-3">
-            <li class="list-group-item" 
-            aria-current="true" 
+          <li
+            class="list-group-item"
+            aria-current="true"
             *ngFor="let brand of brands"
-            [class.active]="brand.id===this.shopParams.brandId"
+            [class.active]="brand.id === this.shopParams.brandId"
             [value]="brand.id"
             (click)="this.onBrandSelected(brand.id)"
-            >{{brand.name}}</li>
-          </ul>
+          >
+            {{ brand.name }}
+          </li>
+        </ul>
         <h5 class="text-warning ml-3">Types</h5>
         <ul class="list-group my-3">
-            <li class="list-group-item" 
-            aria-current="true" 
+          <li
+            class="list-group-item"
+            aria-current="true"
             *ngFor="let type of types"
-            [class.active]="type.id===this.shopParams.typeId"
+            [class.active]="type.id === this.shopParams.typeId"
             [value]="type.id"
             (click)="this.onTypeSelected(type.id)"
-            >{{type.name}}</li>
-          </ul>
-     </section>
+          >
+            {{ type.name }}
+          </li>
+        </ul>
+      </ng-container>
+    </section>
 
-     <section class="col-9">
-         <div class="d-flex justify-content-between align-center pb-2">
-            <app-paging-header
-                [totalCount]="totalCount"
-                [pageNumber]="this.shopParams.pageNumber"
-                [pageSize]="this.shopParams.pageSize"
-            ></app-paging-header>
-            <div class="form-inline mt-2">
-                <input type="text" #search class="form-control mr-2" (keyup.enter)="onSearch()" style="width: 300px;" placeholder="Search">
-                <button class="btn btn-outline-primary my-2" (click)="onSearch()">Search</button>
-                <button class="btn btn-outline-success my-2 ml-2" (click)="onReset()">Reset</button>
-            </div>
-         </div>
-         
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <div class="col-4 mb-4" *ngFor="let item of products">
-                <app-product-item [product]="item"></app-product-item>
-            </div>
+    <section class="col-9">
+      <div class="d-flex justify-content-between align-center pb-2">
+        <app-paging-header
+          [totalCount]="totalCount"
+          [pageNumber]="this.shopParams.pageNumber"
+          [pageSize]="this.shopParams.pageSize"
+        ></app-paging-header>
+        <div class="form-inline" *ngIf="products">
+          <input
+            type="text"
+            #search
+            class="form-control mr-2"
+            (keyup.enter)="onSearch()"
+            style="width: 300px"
+            placeholder="Search"
+          />
+          <button class="btn btn-outline-primary my-2" (click)="onSearch()">
+            Search
+          </button>
+          <button class="btn btn-outline-success my-2 ml-2" (click)="onReset()">
+            Reset
+          </button>
         </div>
-        <div class="d-flex justify-content-center" *ngIf="totalCount && totalCount > 0">
-            <app-pager
-                [pageSize]="shopParams.pageSize"
-                [totalCount]="totalCount"
-                (pageChanged)="onPageChanged($event)"
-            ></app-pager>
+      </div>
+
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col-4 mb-4" *ngFor="let item of products">
+          <app-product-item [product]="item"></app-product-item>
         </div>
-     </section>
- </div>
+      </div>
+      <div
+        class="d-flex justify-content-center"
+        *ngIf="totalCount && totalCount > 0"
+      >
+        <app-pager
+          [pageSize]="shopParams.pageSize"
+          [totalCount]="totalCount"
+          (pageChanged)="onPageChanged($event)"
+        ></app-pager>
+      </div>
+    </section>
+  </div>
 </div>
